# lecture-homework-week6-r

./: CMakeLists.txt  README.md  homework_template.docx  linker-script.ld
.devcontainer/: Dockerfile  devcontainer.json
include/: defines.h  exceptions.h  kbd.h  keymap.h  string.h  timer.h  vid.h
src/: exceptions.c  font.c  kbd.c  main.c  start.s  string.c  timer.c  vid.c
